# aorura

./: Cargo.toml  README.md  default.nix  nixpkgs.nix  release.nix  shell.nix
.github/: CODEOWNERS  settings.yml
cli/: Cargo.toml
cli/src/: main.rs
emu/: Cargo.toml
emu/src/: lib.rs  main.rs  pty.rs  server.rs
self/: Cargo.toml
self/src/: lib.rs
