[package]
name = "aorura"
version = "0.1.0"
edition = "2018"

authors = ["Yegor Timoshenko <yegortimoshenko@riseup.net>"]
description = "AORURA LED manager library"
license = "Apache-2.0"
repository = "https://github.com/transumption/aorura"

[dependencies]
failure = "0.1.5"
num_enum = "0.4.2"
serde = { version = "1.0.101", features = ["derive"] }
serial = "0.4.0"
